# vae

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: unit-tests.yml
backend/: Dockerfile  README.md  pyproject.toml  run-docker.sh
backend/.github/workflows/: unit-tests.yml
backend/backend/: app.py  main.py  model.py
backend/backend/weights/: log_var_mean.pt  mu_mean.pt  vae.pt  vae_decoder.pt
backend/config/: settings.toml
backend/tests/: test_app.py
frontend/: Dockerfile  run-docker-frontend.sh
frontend/src/: App.css  App.js
