[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for VAE"
authors = ["Lionel Guillou <lionel.guillou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
numpy = "^2.1.0"
torchvision = "^0.19.0"
matplotlib = "^3.9.2"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
pillow = "^10.4.0"
dynaconf = "^3.2.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = "backend.main:main"